Implement RackType scalar presence
